--- a/mycart page/mycart.css
+++ b/mycart page/mycart.css
@@ -20,7 +20,21 @@ body {
     margin-bottom: 15px;
     padding: 15px;
     border-radius: 20px;
+    animation-name: start3;
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+    animation-direction: alternate-reverse;
+    transform: none;
 }
+@keyframes start3 {
+    from {
+        transform: none;
+    }
+    to {
+        transform: translateY(-20%);
+    }
+}
+
 .navbar {
     width: 800px;
     height: 2.5rem;
